# inteligraphic

./: README.md
DFT-Studio-Project/Guiding-Instructions/: Summary-and-Delivery-Guide.md
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/01_basic_two_blocks/: actual-produced.json  design.def  expected.json  lib.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/02_orientations_8cases/: actual-produced.json  design.def  expected.json  lib.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/03_multiple_lef_libs/: actual-produced.json  design.def  expected.json  libA.lef  libB.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/04_regions_and_assignment/: actual-produced.json  design.def  expected.json  lib.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/05_blockages_basic/: actual-produced.json  design.def  expected.json  lib.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/06_top_pins/: actual-produced.json  design.def  expected.json  lib.lef  tech.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/07_mixed_features/: actual-produced.json  design.def  expected.json  lib.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/08_units_scale_2000/: actual-produced.json  design.def  expected.json  lib.lef  tech.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/09_fixed_and_placed/: actual-produced.json  design.def  expected.json  lib.lef
DFT-Studio-Project/Project/doc/def-tests/dft_opendb_testcases/10_small_array_16inst/: actual-produced.json  design.def  expected.json  lib.lef
DFT-Studio-Project/Project/src/: CMakeLists.txt  compare_expected_vs_actual.py  gen_actual_json.sh  run_tc_tests.sh
DFT-Studio-Project/Project/src/cmake/: BundledDeps.cmake  CompilerOptions.cmake  FindDependencies.cmake
DFT-Studio-Project/Project/src/dft_api/: CMakeLists.txt
DFT-Studio-Project/Project/src/dft_api/include/dftodb/: DesignHandle.h  Importer.h  Json.h  Traverser.h  Types.h
DFT-Studio-Project/Project/src/dft_api/src/: DesignHandle.cpp  Importer.cpp  Json.cpp  Traverser.cpp
DFT-Studio-Project/Project/src/tests/: CMakeLists.txt  test_import_and_traverse.cpp  test_negative_inputs.cpp
DFT-Studio-Project/Project/src/tests/data/: malformed.lef  min.def  min.lef
DFT-Studio-Project/Project/src/tools/: CMakeLists.txt  dftodb_inspect.cpp
InteliGraphic/: electron-builder-linux-mac.json  electron-builder-win-arm64.json  electron-builder-win.json  electron-builder-win32.json  package-lock.json  package.json
InteliGraphic/drawio/src/main/webapp/: index.html  vsdxImporter.html
InteliGraphic/drawio/src/main/webapp/js/: test  viewer-static.min.js  viewer.min.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/AIdraw/: test.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/BottomDock/: dock_runtime_bridge.js  readme.txt
InteliGraphic/drawio/src/main/webapp/js/dftartist/ContextPanel/: context_panel_bootstrap.js  context_panel_core.js  ip_library_panel.js  properties_panel.js  ui_surface_theme_patch.js  view_filter_panel.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/Dialog/: dft_dialog_service.v2.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/FlowNavigator/: env_editor_dialog.js  flow_navigator_bootstrap.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/FlowNavigator/flow_nav_modular/: flow_nav_analysis.js  flow_nav_designs.js  flow_nav_dftspec.js  flow_nav_markers.js  flow_nav_shared.js  flow_navigator_core.modular.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/Model/: 1.ini  dft_model_v2.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/PageSession/: page_session_manager.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/PolygonTool/: PolygonTool.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/ProjectExplorer/: project_explorer_core.js  project_explorer_integration.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/convertxml2dftspec/: convertXml2Mermaid.js  convertXml2Yaml.js  convertYaml2Dftspec.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/dftLayout/: dftlayout_shell.js  test.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/dftMenu/: dftartistFlowProcess.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/dftNewProjectDesignMenu/: dftNewDesignMenu.js  dftNewProjectMenu.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/dftProjectFile_process/: loadPage.js  loadproject.js  newproject.js  page_file_ops.js  savepage.js  testPlugin.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/dft_floorplan/: dft_datasource_floorplan_debug_patch.js  dft_floorplan_interface_pair_yaml.js  dft_floorplan_ip.js  dft_floorplan_line.js  dft_floorplan_module_yaml.js  dft_install_main.js  dftartist_create_datasource.js  dftartist_create_interface.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/dftartist_db/: design.md  design2.md  dftartist_create_interface.js  ui.md
InteliGraphic/drawio/src/main/webapp/js/dftartist/dftartist_flow_process/: dftartistFlowProcess.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/dftartist_ip/: dftartist_create_ip.js  dftartist_create_ip_common.js  dftartist_ip_symbol_core.js  dftartist_ip_transform.js  floorplan_interface.c  sidebar_textlist.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/dftartist_ipConfig/: dftartist_config_core.js
InteliGraphic/drawio/src/main/webapp/js/dftartist/ip_edge_config/: dftartist_ip_edge_config.js
InteliGraphic/drawio/src/main/webapp/js/diagramly/: ElectronApp.js
InteliGraphic/drawio/src/main/webapp/plugins/: import.js  nestedDataEditor.js
InteliGraphic/drawio/src/main/webapp/plugins/dftspec/: dftspec-plugin.jsd  edt copy.js  edt.js  homepage.js  newenv.js  testPlugin.js
InteliGraphic/drawio/src/main/webapp/resources/: dia.txt  dia_zh.txt
InteliGraphic/plugins/: myExportPlugin.js
InteliGraphic/src/main/: convert-mmd.js  dft_slang_bridge.cjs  electron-preload.js  electron.js
(+139 files in other folders)
